Se añadió el código para que funcione el botón de la linterna, el botón de la bateria con un cálculo estimado de la duración de la bateria, la toolbar ahora muestra el % de bateria restante, y se puede ver la hora. Además de que el titulo de la toolbar cambia según en que fragment esté el usuario.
Queda programar la flecha "back" y el construir el fragment de configuraciones para linkearlo en la toolbar.

--- a/app/src/main/res/drawable/ic_bateria_24dp.xml
+++ b/app/src/main/res/drawable/ic_bateria_24dp.xml
@@ -1,9 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
-    android:viewportWidth="24.0"
-    android:viewportHeight="24.0"
-    android:tint="?attr/colorControlNormal"> <path
-    android:fillColor="@android:color/white"
-    android:pathData="M15.67,4H14V2h-4v2H8.33C7.6,4 7,4.6 7,5.33V21.67C7,22.4 7.6,23 8.33,23h7.33c0.74,0 1.34,-0.6 1.34,-1.33V5.33C17,4.6 16.4,4 15.67,4z"/>
+    android:viewportWidth="960"
+    android:viewportHeight="960">
+  <path
+      android:pathData="M320,880q-17,0 -28.5,-11.5T280,840v-640q0,-17 11.5,-28.5T320,160h80v-80h160v80h80q17,0 28.5,11.5T680,200v640q0,17 -11.5,28.5T640,880L320,880ZM360,400h240v-160L360,240v160Z"
+      android:fillColor="#e3e3e3"/>
 </vector>
