--- a/app/src/main/res/layout/fragment_consejo.xml
+++ b/app/src/main/res/layout/fragment_consejo.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.consejo.ConsejoFragment">
+    tools:context=".ui.consejo.ConsejoFragment"
+    android:background="#FF0000">
 
     <TextView
         android:id="@+id/text_consejo"
