--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,12 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_inicio">
+    app:startDestination="@+id/navigation_inicio"
+    app:navGraph="@navigation/mobile_navigation"
+    >
 
     <fragment
         android:id="@+id/navigation_inicio"
         android:name="com.example.trabajo1.ui.inicio.InicioFragment"
-        android:label="@string/title_inicio"
         tools:layout="@layout/fragment_inicio" />
 
     <fragment
@@ -20,12 +21,10 @@
     <fragment
         android:id="@+id/navigation_consejo"
         android:name="com.example.trabajo1.ui.consejo.ConsejoFragment"
-        android:label="@string/title_consejo"
         tools:layout="@layout/fragment_consejo" />
 
     <fragment
         android:id="@+id/navigation_mas"
         android:name="com.example.trabajo1.ui.mas.MasFragment"
-        android:label="@string/title_mas"
         tools:layout="@layout/fragment_mas" />
 </navigation>
