--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -11,12 +11,12 @@
         android:id="@+id/customToolbar"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:background="?attr/colorPrimary"
+        android:background="@color/material_dynamic_neutral30"
         android:paddingTop="30dp"
-        app:navigationIcon="@drawable/ic_flecha_volver_24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:navigationIcon="@drawable/ic_flecha_volver_24dp">
 
         <!-- Contenedor interno de la barra -->
         <LinearLayout
