Las noticias solo se cargan la primera vez que se abre la app y no cada vez que se vuelve al fragment. Se añadió una funcionalidad que cuando el usuario tira hacia abajo las noticias se actualizan.

--- a/app/src/main/res/layout/fragment_inicio.xml
+++ b/app/src/main/res/layout/fragment_inicio.xml
@@ -54,13 +54,21 @@
     </androidx.cardview.widget.CardView>
 
     <!-- Noticias debajo -->
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerNoticias"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipeRefreshLayoutNoticias"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_margin="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cardDolar" />
+        app:layout_constraintTop_toBottomOf="@id/cardDolar">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerNoticias"
+            android:layout_width="0dp"
+            android:layout_height="0dp"/>
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
