--- a/app/src/main/res/layout/fragment_mas.xml
+++ b/app/src/main/res/layout/fragment_mas.xml
@@ -32,4 +32,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.106" />
+
+    <Button
+        android:id="@+id/btnOpenVideoRecorder"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Abrir Video Recorder"
+        app:layout_constraintTop_toBottomOf="@id/btnOpenRecorder"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
