--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,17 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+    android:viewportWidth="300"
+    android:viewportHeight="300">
+    <group android:scaleX="0.9"
+        android:scaleY="0.9"
+        android:translateX="15"
+        android:translateY="15">
+        <path
+            android:pathData="M6.54,150a143.46,143.45 0,1 0,286.92 0a143.46,143.45 0,1 0,-286.92 0z"
+            android:fillColor="#808080"/>
+        <path
+            android:pathData="m112.75,50.04c-10.32,0 -18.62,6.94 -18.62,15.55l0,168.82c0,8.62 8.31,15.55 18.62,15.55l74.5,0c10.32,0 18.62,-6.94 18.62,-15.55l0,-168.82c0,-8.62 -8.31,-15.55 -18.62,-15.55l-74.5,0zM136.82,58.04 L163.18,58.04c1.11,0 2,0.85 2,1.91 0,1.06 -0.89,1.91 -2,1.91l-26.37,0c-1.11,0 -2,-0.85 -2,-1.91 0,-1.06 0.89,-1.91 2,-1.91zM113.95,68.56 L186.05,68.56c3.94,0 7.12,2.52 7.12,5.65l0,143.58c0,3.13 -3.17,5.65 -7.12,5.65l-72.1,0c-3.94,0 -7.12,-2.52 -7.12,-5.65l0,-143.58c0,-3.13 3.17,-5.65 7.12,-5.65zM136.82,232.02 L163.18,232.02c1.11,0 2,0.89 2,2l0,5.09c0,1.11 -0.89,2 -2,2l-26.37,0c-1.11,0 -2,-0.89 -2,-2l0,-5.09c0,-1.11 0.89,-2 2,-2z"
+            android:fillColor="#ffffff"/>
+    </group>
 </vector>
