me funciona todo lo de la rama de juan. Falta que se vea el mapa, nose donde ponerlo. Es decir, que boton

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -25,5 +25,6 @@
     <fragment
         android:id="@+id/navigation_mas"
         android:name="com.example.trabajo1.ui.mas.MasFragment"
-        tools:layout="@layout/fragment_mas" />
+        tools:layout="@layout/fragment_map" /><!--tools:layout="@layout/fragment_mas" />-->
+
 </navigation>
