listo, el mapa se abre cuando apretas mas, hay que ubicarlo bien, falta que le acomode las funcionalidades de guardar posicion, aclarar el box de direccion y bajar el boton de mi ubicacion

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -24,7 +24,9 @@
 
     <fragment
         android:id="@+id/navigation_mas"
-        android:name="com.example.trabajo1.ui.mas.MasFragment"
-        tools:layout="@layout/fragment_map" /><!--tools:layout="@layout/fragment_mas" />-->
+        android:name="com.example.trabajo1.ui.map.MapFragment"
+        tools:layout="@layout/fragment_map" />
+        <!--android:name="com.example.trabajo1.ui.mas.MasFragment"-->
+        <!--tools:layout="@layout/fragment_mas" />-->
 
 </navigation>
