--- a/app/src/main/res/layout/fragment_video_recorder.xml
+++ b/app/src/main/res/layout/fragment_video_recorder.xml
@@ -54,7 +54,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Grabar"
+        android:layout_marginEnd="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toStartOf="@id/btnPause" />
+
+    <!-- Botón Pausar -->
+    <Button
+        android:id="@+id/btnPause"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Pausar"
+        android:enabled="false"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@id/btnRecord"
+        app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
