--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -15,7 +15,6 @@
         android:id="@+id/cardDireccion"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-
         app:cardCornerRadius="12dp"
         app:cardElevation="8dp"
         app:layout_constraintTop_toTopOf="parent"
@@ -25,14 +24,31 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp">
 
-        <TextView
-            android:id="@+id/txtDireccion"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="16dp"
-            android:text="Dirección"
-            android:textColor="#000000"
-            android:textSize="18sp" />
+            android:orientation="horizontal"
+            android:padding="8dp">
+
+            <EditText
+                android:id="@+id/edtDireccion"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:hint="Ingresar dirección"
+                android:textColor="#000000"
+                android:textSize="16sp"
+                android:inputType="text" />
+
+            <ImageButton
+                android:id="@+id/btnBuscarDireccion"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@android:drawable/ic_menu_search"
+                android:contentDescription="Buscar"
+                android:background="?attr/selectableItemBackgroundBorderless"/>
+        </LinearLayout>
     </androidx.cardview.widget.CardView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
