--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="background_light">#FFFFFF</color>
+    <color name="card_gray">#E0E0E0</color>
+    <color name="icon_primary">#6200EE</color>
+    <color name="text_primary">#000000</color>
 </resources>
