Función para medir con Realidad Aumentada

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -62,7 +62,7 @@
         tools:layout="@layout/fragment_config" />
     <fragment
         android:id="@+id/medidorFragment"
-        android:name="com.example.trabajo1.ui.mediorRA.MedidorFragment"
+        android:name="com.example.trabajo1.ui.medidorRA.MedidorFragment"
         tools:layout="@layout/fragment_medidor" />
 
 
