--- a/app/src/main/res/layout/fragment_medidor.xml
+++ b/app/src/main/res/layout/fragment_medidor.xml
@@ -1,14 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/medidor_container"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.mediorRA.MedidorFragment">
+    android:layout_height="match_parent">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <!-- Fragmento de AR -->
+    <fragment
+        android:id="@+id/arFragment"
+        android:name="com.google.ar.sceneform.ux.ArFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent" />
 
+    <!-- Texto para mostrar distancia -->
+    <TextView
+        android:id="@+id/tvDistance"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Marca dos puntos"
+        android:textColor="@android:color/white"
+        android:textSize="18sp"
+        android:layout_gravity="top|center_horizontal"
+        android:background="#80000000"
+        android:padding="8dp" />
 </FrameLayout>
