--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -15,8 +15,7 @@
         android:paddingTop="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:navigationIcon="@drawable/ic_flecha_volver_24dp">
+        app:layout_constraintTop_toTopOf="parent">
 
         <!-- Contenedor interno de la barra -->
         <LinearLayout
@@ -24,10 +23,8 @@
             android:layout_height="match_parent"
             android:gravity="center_vertical"
             android:orientation="horizontal"
-            android:paddingStart="8dp"
-            android:paddingEnd="8dp"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="30dp">
+            android:layout_marginEnd="8dp"
+            >
 
             <!-- Hora -->
 
@@ -38,44 +35,34 @@
                 android:layout_marginStart="8dp"
                 android:text="@string/title_hora"
                 android:textColor="@android:color/white"
+                android:textSize="20sp"
                 android:textStyle="bold" />
 
-            <!-- Texto del fragment -->
-            <TextView
-                android:id="@+id/txtFragment"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:text="@string/title_inicio"
-                android:textColor="@android:color/white"
-                android:textStyle="bold" />
-
-            <!-- Espaciador flexible -->
             <View
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_weight="1" />
 
-            <!-- Porcentaje batería -->
             <TextView
                 android:id="@+id/txtBatteryPercentage"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/title_porcentaje_bateria"
-                android:textColor="@android:color/white" />
+                android:textColor="@android:color/white"
+                android:textSize="20sp"
+                />
 
-            <!-- Icono batería -->
             <ImageButton
                 android:id="@+id/iconBattery"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="8sp"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:contentDescription="@string/linterna"
                 android:minWidth="48dp"
                 android:minHeight="48dp"
                 android:src="@drawable/ic_bateria_24dp" />
 
-            <!-- Botón linterna -->
             <ImageButton
                 android:id="@+id/btnLinterna"
                 android:layout_width="wrap_content"
@@ -86,6 +73,18 @@
                 android:minWidth="48dp"
                 android:minHeight="48dp"
                 android:src="@drawable/ic_linterna_apagada" />
+
+            <ImageButton
+                android:id="@+id/iconPhone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8sp"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:contentDescription="@string/linterna"
+                android:minWidth="48dp"
+                android:minHeight="48dp"
+                android:src="@drawable/ic_fono_24dp" />
+
         </LinearLayout>
     </androidx.appcompat.widget.Toolbar>
 </androidx.constraintlayout.widget.ConstraintLayout>
